# password-keeper

./: .eslintrc.json  .gitignore  .prettierrc  README.md  babel.config.js  index.html  package.json  tsconfig.json  vite.config.ts  wt-setup.cmd
docs/: features.md
electron/: Images.ts  consts.ts  helpers.ts  main.ts  preload.js  preload.ts  steam.ts
electron/database/: database.ts
prisma/: schema.prisma
public/: index.html  logo.icns  manifest.json
src/: App.tsx  OldApp.tsx  _vars.scss  consts.ts  enums.ts  index.tsx  main.tsx  myscript.js  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: database.rs  mod.rs  password_vault.rs  steam_api_keys.rs  steam_users.rs  unique_identifier.rs  utils.rs  validation.rs
src-tauri/src/handlers/: mod.rs  password_vault.rs  steam.rs  steam_api_keys.rs  steam_users.rs
src/Providers/: RowsDataProvider.tsx
src/api/Passwords/: index.ts
src/api/SteamManager/: api_keys.ts  steam.ts  users.ts
src/backend/: Images.ts  helpers.ts  main.ts  preload.ts  steam.ts  windows.ts
src/backend/database/: database.ts  passwordsApp.ts
src/backend/handlers/: general.ts  passwordsApp.ts  steamApp.ts
src/components/Apps/: index.ts
src/components/BottomPanel/: index.tsx  styles.scss
src/components/Card/: index.tsx  styles.scss
src/frontend/: App.tsx  _vars.scss
src/reducers/: rowsDataReducer.ts  steamUsersReducer.ts
src/shared/: enums.ts
src/types/: global.d.ts
webpack/: electron.webpack.js  react.webpack.js
(+35 files in other folders)
